--- a/blog/responsive.css
+++ b/blog/responsive.css
@@ -1,6 +1,6 @@
 /* Responsive Design */
 
-/* @media (max-width: 1385px) {
+@media (max-width: 1385px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -52,7 +52,7 @@
         max-width: 1000px;
         margin: 0 auto;
     }
-} */
+}
 
 @media (max-width: 1024px) {
     #name {
