--- a/bbas/css/boundary-editor.css
+++ b/bbas/css/boundary-editor.css
@@ -1,5 +1,10 @@
 #overlay-canvas.drawing {
     cursor: crosshair;
+    touch-action: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #overlay-canvas.disabled {
