--- a/bbas/css/camera.css
+++ b/bbas/css/camera.css
@@ -11,6 +11,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    pointer-events: auto;
-    z-index: 10;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 5;
 }
